fixing overflow visit page

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -299,7 +299,7 @@ body {
     font-family: 'transducer', sans-serif;
     grid-area: p;
     justify-content: end;
-    margin-right: -10%;
+    margin-right: -5%;
     padding-bottom: 1.8rem;
 }
 .opening-hours-h {
